@startuml
skinparam classAttributeIconSize 0

' Types and Enums
interface Card {
  +name: CardName
  +value: number
  +color: CardColor
  +owner: string
  +visibility: CardVisibility
}

enum CardColor {
  HEARTS = "HEARTS"
  DIAMONDS = "DIAMONDS"
  CLUBS = "CLUBS"
  SPADES = "SPADES"
}

enum CardName {
  two = "two"
  three = "three"
  four = "four"
  five = "five"
  six = "six"
  seven = "seven"
  eight = "eight"
  nine = "nine"
  ten = "ten"
  jack = "jack"
  queen = "queen"
  king = "king"
  ace = "ace"
}

enum CardVisibility {
  player = "player"
  none = "none"
  all = "all"
}

' Classes
class Game<T extends Player = Player> {
  #players: T[]
  -gameId: string
  +constructor(gameId: string)
  +getGameId(): string
  +addPlayer(player: T): void
  +getPlayers(): T[]
}

class CardGame<T extends CardGamePlayer = CardGamePlayer> {
  +constructor(gameId: string)
  #setDefaultDealerChip(): void
  #updateDealerChip(): void
}

class Poker {
  {static} +MAX_PLAYER_COUNT: number = 5
  {static} +PLAYER_CARDS_NUMBER: number = 2
  {static} +POKER_CARDS_NUMBER: number = 5
  {static} +POKER_DESK_ID: string = "PokerDesk"
  -pokerDeck: PokerDeck
  -pokerDeskCards: Card[]
  -defaultbet: number = 10
  -currentBet: number
  -pot: number
  +constructor(gameId: string)
  +startGame(): void
  -nextRound(): void
  -playRound(): void
  -handCardsOut(): void
  -resetCards(): void
  -resetBets(): void
  -setDeafaultBets(): void
  -makeMove(): void
  -checkHands(): void
  -handOutWin(): void
}

class Blackjack {
  {static} +PLAYER_CARDS_NUMBER: number = 2
  {static} +BALCKJACK_BOT_ID: string = "BlackjackBot"
  -blackjackDeck: BlackjackDeck
  -blackJackBot: BlackjackBot
  +constructor(gameId: string)
  -startGame(): void
  -nextRound(): void
  -playRound(): void
  -handCardsOut(): void
  -resetCards(): void
  -checkHandsValue(): void
  -makeMove(): void
  -makeBets(): void
  -resetBets(): void
  -handOutWin(): void
}

class BlackjackBot {
  -cards: Card[]
  -handValue: number
  +constructor()
  +getHandValue(): number
  +addCard(card: Card): void
  -checkHandValue(): void
  +makesHit(): boolean
  +hasBlackJack(): boolean
}

class Player {
  -playerId: string
  -username: string
  -displayname: string
  -balance: number
  -bet: number
  -desiredBet: number = 0
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getPlayerId(): string
  +getUsername(): string
  +getDisplayname(): string
  +getBalance(): number
  +getBet(): number
  +getDesiredBet(): number
  +setDesiredBet(desiredBet: number): boolean
  +setBet(bet: number): void
  +winMoney(win: number): void
  {static} +xNextPlayer(players: Player[], i: number, x: number): number
  {static} +nextPlayer(players: Player[], i: number): number
  +isOutOfMoney(): boolean
}

class CardGamePlayer {
  #cards: Card[]
  -hasDealerChip: boolean
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getCards(): Card[]
  +getDealerChip(): boolean
  +setDealerChip(hasDealerChip: boolean): void
  +addCard(card: Card): void
  {static} +playerWithDealerChip(players: CardGamePlayer[]): number
  +clearHand(): void
}

class PokerPlayer {
  -pressedFold: boolean = false
  -pressedCheck: boolean = false
  -pressedBet: boolean = false
  -pressedCall: boolean = false
  -pressedRaise: boolean = false
  -valueOfHand: number[]
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getCardCombinationValue(): number
  +getValueOfCardCombination(): number
  +getPressedFold(): boolean
  +getPressedCheck(): boolean
  +getPressedBet(): boolean
  +getPressedCall(): boolean
  +getPressedRaise(): boolean
  +setPressedFold(pressedFold: boolean): void
  +setPressedCheck(pressedCheck: boolean): void
  +setPressedBet(pressedBet: boolean): void
  +setPressedCall(pressedCall: boolean): void
  +setPressedRaise(pressedRaise: boolean): void
  -resetActions(): void
  +checkHand(cards: Card[]): void
  -hasRoyalFlush(cards: Card[]): boolean
  -hasStraightFlush(cards: Card[]): boolean
  -hasQuadruple(cards: Card[]): boolean
  -hasFullHouse(cards: Card[]): boolean
  -hasFlush(cards: Card[]): boolean
  -hasStraight(cards: Card[]): boolean
  -hasTripple(cards: Card[]): boolean
  -hasTwoPair(cards: Card[]): boolean
  -hasPair(cards: Card[]): boolean
  +getHighCard(cards: Card[]): void
  -getPlayerHighCard(): number
  -getPlayerLowCard(): number
}

class BlackjackPlayer {
  -pressedHit: boolean = false
  -pressedStand: boolean = false
  -pressedDouble: boolean = false
  -handValue: number
  +constructor(playerId: string, username: string, \n  displayname: string, balance: number)
  +getHandValue(): number
  +getPressedHit(): boolean
  +getPressedStand(): boolean
  +getPressedDouble(): boolean
  +setPressedHit(pressedHit: boolean): void
  +setPressedStand(pressedStand: boolean): void
  -setPressedDouble(pressedDouble: boolean): void
  -resetActions(): void
  +checkHandValue(): void
}

class Deck {
  {static} +DEALER_ID: string = "Dealer"
  #deck: Card[]
  +constructor()
  #shuffle(cardDeck: Card[]): void
  +dealCard(cardDeck: Card[], id: string): Card
  +getDeck(): Card[]
}

class BlackjackDeck {
  +constructor()
  -blackjackDeckInit(): void
}

class PokerDeck {
  +constructor()
  -pokerDeckInit(): void
}

' Inheritance
Game <|-- CardGame
CardGame <|-- Poker
CardGame <|-- Blackjack
Deck <|-- BlackjackDeck
Deck <|-- PokerDeck
Player <|-- CardGamePlayer
CardGamePlayer <|-- PokerPlayer
CardGamePlayer <|-- BlackjackPlayer

' Associations
Game o-- "many" Player : contains
Poker *-- "many" Card : pokerDeskCards
CardGamePlayer *-- "many" Card : cards
Deck *-- "many" Card : deck
Poker o-- "1" PokerDeck : uses
Blackjack o-- "1" BlackjackDeck : uses
Blackjack *-- "1" BlackjackBot : blackJackBot
BlackjackBot *-- "many" Card : cards

@enduml

